Fix heading transform causing overflow issue (#5)

--- a/src/layouts/blog/headings.css
+++ b/src/layouts/blog/headings.css
@@ -36,4 +36,5 @@ article h4 {
 
 article h2 {
     font-size: 1.5rem;
+    width: 75%;
 }
